--- a/build.gradle
+++ b/build.gradle
@@ -18,19 +18,41 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', '2020.0.3')
+}
+
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.grpc:grpc-netty:1.38.0'
     implementation 'io.grpc:grpc-protobuf:1.38.0'
     implementation 'io.grpc:grpc-stub:1.38.0'
-    compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'scent-market-grpc/build/generated/source/proto/main/grpc'
+            srcDirs 'scent-market-grpc/build/generated/source/proto/main/java'
+        }
+    }
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
