--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.grpc:grpc-netty:1.38.0'
     implementation 'io.grpc:grpc-protobuf:1.38.0'
     implementation 'io.grpc:grpc-stub:1.38.0'
+    implementation 'it.ozimov:embedded-redis:0.7.2'
     runtimeOnly 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
